<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="uiState"
            type="com.kirillemets.flashcards.android.ui.review.ReviewUIState" />

        <variable
            name="viewModel"
            type="com.kirillemets.flashcards.android.ui.review.ReviewFragmentViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reviewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="0.6">

        <RelativeLayout
            android:id="@+id/word_frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:background="@android:drawable/gallery_thumb"
            android:backgroundTint="?attr/colorReviewBorder"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/answer_frame_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_counter"
            app:layout_constraintVertical_chainStyle="spread">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/word_reading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{uiState.currentCard.wordReading}"
                        android:textAlignment="center"
                        android:textSize="@dimen/review_reading_text_size"
                        android:visibility='@{(uiState.showAnswer &amp;&amp; !uiState.currentCard.wordReading.empty) ? View.VISIBLE : View.GONE}'
                        tools:text="Word reading"/>

                    <TextView
                        android:id="@+id/word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{uiState.currentCard.word}"
                        android:textAlignment="center"
                        android:textColor="?attr/colorMainText"
                        android:textSize="@dimen/review_word_text_size"
                        tools:text="Word"/>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/answer_frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/gallery_thumb"
            android:backgroundTint="?attr/colorReviewBorder"
            android:padding="8dp"
            android:visibility="@{uiState.showAnswer ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/answer_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/word_frame_layout"
            app:layout_constraintVertical_chainStyle="spread"
            tools:visibility="visible">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/answer_reading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{uiState.currentCard.answerReading}"
                        android:textAlignment="center"
                        android:textSize="@dimen/review_reading_text_size"
                        android:visibility='@{!uiState.currentCard.answerReading.empty ? View.VISIBLE : View.GONE}'
                        tools:text="Answer reading"/>

                    <TextView
                        android:id="@+id/answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{uiState.currentCard.answer}"
                        android:textAlignment="center"
                        android:textColor="?attr/colorMainText"
                        android:textSize="@dimen/review_word_text_size"
                        tools:text="Answer"/>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/answer_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{uiState.showAnswer ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_miss"
                style="@style/ReviewButton.Miss"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:onClick="@{() -> viewModel.onButtonAnswerClick(0)}"
                android:text="@string/miss"
                app:layout_constraintBottom_toTopOf="@+id/miss_button_delay"
                app:layout_constraintEnd_toStartOf="@+id/button_hard"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_hard"
                style="@style/ReviewButton.Hard"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewModel.onButtonAnswerClick(2)}"
                android:text="@string/hard"
                app:layout_constraintEnd_toStartOf="@+id/button_easy"
                app:layout_constraintStart_toEndOf="@+id/button_miss"
                app:layout_constraintTop_toTopOf="@+id/button_miss" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_easy"
                style="@style/ReviewButton.Easy"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> viewModel.onButtonAnswerClick(1)}"
                android:text="@string/easy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_hard"
                app:layout_constraintTop_toTopOf="@+id/button_miss" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/incorrect"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button_miss"
                app:layout_constraintEnd_toEndOf="@+id/button_miss"
                app:layout_constraintStart_toStartOf="@+id/button_miss" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:minLines="1"
                android:text="@string/correct"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/button_easy"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button_hard"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/miss_button_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button_miss"
                app:layout_constraintStart_toStartOf="@+id/button_miss"
                tools:text="+0 days"/>


            <TextView
                android:id="@+id/hard_button_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{}"
                app:layout_constraintEnd_toEndOf="@+id/button_hard"
                app:layout_constraintStart_toStartOf="@+id/button_hard"
                app:layout_constraintTop_toTopOf="@+id/miss_button_delay"
                tools:text="+1 day" />

            <TextView
                android:id="@+id/easy_button_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/button_easy"
                app:layout_constraintStart_toStartOf="@+id/button_easy"
                app:layout_constraintTop_toTopOf="@+id/miss_button_delay"
                tools:text="+4 days" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_show_answer"
            style="@style/ShowAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onButtonShowAnswerClick()}"
            android:text="@string/show_answer_button"
            android:textSize="18sp"
            android:visibility="@{!uiState.showAnswer ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/text_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="122 / 357" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>