<resources>
    <string name="app_name">JpCards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchHint">Search words…</string>
    <string name="buttonAddText">add</string>
    <string name="progressInDays">delay: %1$dd/%2$dd</string>
    <string name="item_remove_string">Remove selected</string>
    <string name="item_reset_string">Reset selected</string>
    <string name="btn_review">Review</string>
    <string name="show_answer_button">show answer</string>
    <string name="countOfWordsToReview">You currently have %d words to review</string>
    <string name="normal">normal</string>
    <string name="hard">hard</string>
    <string name="miss">miss</string>
    <string name="easy">easy</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct"><b>CORRECT</b>, AND IT WAS:</string>
    <string name="menu_review">review</string>
    <string name="menu_search">search</string>
    <string name="menu_my_words">my words</string>
    <string name="discard">discard</string>
    <string name="my_dictionary_title">My dictionary</string>
    <string name="search">search</string>
    <string name="settings">settings</string>
    <string name="review_header">Review</string>
    <string name="miss_multiplier">Miss button multiplier</string>
    <string name="hard_multiplier">Hard button multiplier</string>
    <string name="easy_multiplier">Easy button multiplier</string>
    <string name="review_font_size">Font size in review</string>
    <string name="filterHint">Filter words…</string>
    <string name="appearance_header">Appearance</string>
    <string name="insertion_success">Word added</string>
    <string name="insertion_failure">Word already exists</string>
    <string name="delete_card">Delete this card</string>
    <string name="destination">Destination</string>
    <string name="progress">Progress</string>
    <string name="search_hint">Type any word in the form above to search for it.\nExamples:\n - Run\n - Hashiru\n - はしる\n - 走る</string>
</resources>