...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.4">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_review"
            app:layout_constraintBottom_toBottomOf="parent"
...
